overflow solved

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,7 @@ body {
     background-color: #161616;
     border-radius: 30px;
     width: 1321px;
+    /* width: 90%; */
     height: 646px;
 
 }
@@ -191,7 +192,7 @@ body {
 
 .background hr {
     border: 1px solid rgba(255, 255, 255, 0.1);
-    width: 1320px;
+    width: 90%;
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -209,3 +210,120 @@ body {
     color: #B9B9B9;
 
 }
+
+@media only screen and (max-width:688px) {
+    body {
+        overflow: auto;
+
+    }
+
+    .first-section {
+        display: flex;
+        background-color: #161616;
+        border-radius: 30px;
+        width: 90%;
+        /* width: 90%; */
+        height: auto;
+        flex-direction: column
+    }
+
+    .text h1 {
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 33px;
+        text-align: center;
+        color: white;
+        margin-bottom: 20px;
+    }
+
+    .text p {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 24px;
+        /* or 171% */
+
+        text-align: center;
+        margin-bottom: 0;
+        padding: 20px;
+    }
+
+
+    .text {
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .text button {
+        margin-top: 30px;
+        padding: 16px 25px;
+        background-color: #DD0000;
+        border-radius: 5px;
+        color: white;
+
+
+    }
+
+    .text button a {
+        color: white;
+        text-decoration: none;
+        font-weight: 400;
+        font-size: 20px;
+
+    }
+
+    .text button a i {
+        margin-left: 10px;
+    }
+
+
+    .player img {
+        width: 70%;
+        display: flex;
+        padding-left: 60px;
+        margin-top: 33px;
+        margin-right: 79px;
+
+    }
+
+    .blog-container {
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        column-gap: 24px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu {
+        padding-left: 20px;
+        border-radius: 10px;
+        background-color: #ffffff;
+        height: 312px;
+    }
+
+    .blog {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-items: center;
+        gap: 24px;
+        margin-bottom: 130px;
+    }
+
+    .footer-menu {
+        text-align: center;
+        padding-bottom: 130px;
+        display: flex;
+        justify-content: center;
+        /* gap: 60px; */
+        flex-direction: column;
+    }
+
+
+
+
+
+
+    @media only screen and (min-width:688px) and (max-width:992px) {}
